--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,148 @@
-body, html {
-  width: 100%;
-  height: 100%;
+body {
+  background: #dd3f3e;
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
-  overflow: hidden; 
 }
 
-body {
-  background-color: #141417;
+.ticket {
   display: flex;
   justify-content: center;
-  align-items: center; 
-  font-family: 'Pacifico', cursive;
-}
-
-svg {
-  height: 100%;
-  width: 100%;
+  align-items: center;
+  width: 700px;
+  margin: 20px auto;
   
+  .stub, .check {
+    box-sizing: border-box;
+  }
 }
 
-.text3d-wrap-1 {    
+.stub {
+  background: #ef5658;
+  height: 250px;
+  width: 250px;
+  color: white;
+  padding: 20px;
+  position: relative;
+  
+  &:before {
+    content: '';
     position: absolute;
-    top: 50;
-    height: 260px;
+    top: 0; right: 0;
+    border-top: 20px solid #dd3f3e;
+    border-left: 20px solid #ef5658;
+    width: 0;
+  }
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0; right: 0;
+    border-bottom: 20px solid #dd3f3e;
+    border-left: 20px solid #ef5658;
+    width: 0;
+  }
+  
+  .top {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    perspective: 3000px;    
-}    
-.text3d-1 {
-    align-self: center;
-    margin-top: -18px;
-    transition: all 0.3s ease;
-    transform: rotateX(40deg) rotateZ(5deg);
-    font-size: 24px;
-    letter-spacing: 3px;
-    color: #f5f5f5;
-    text-shadow: white 0.006em 0.006em 0.007em, #9c9c9c 1px 1px 1px, #9c9c9c 1px 2px 1px, #9c9c9c 1px 3px 1px, #9c9c9c 1px 4px 1px, #9c9c9c 1px 5px 1px, #9c9c9c 1px 6px 1px, #9c9c9c 1px 7px 1px, #9c9c9c 1px 8px 1px, #9c9c9c 1px 9px 1px, #9c9c9c 1px 10px 1px, #9c9c9c 1px 11px 1px, #9c9c9c 1px 12px 1px, rgba(16, 16, 16, 0.4) 1px 18px 6px, rgba(16, 16, 16, 0.2) 1px 22px 10px, rgba(16, 16, 16, 0.2) 1px 26px 35px, rgba(16, 16, 16, 0.4) 1px 30px 65px;
-}
-.text3d-wrap-1:hover .text3d-1{
-    margin-top: -26px;
-    text-shadow: white 0.006em 0.006em 0.007em, #9c9c9c 1px 1px 1px, #9c9c9c 1px 2px 1px, #9c9c9c 1px 3px 1px, #9c9c9c 1px 4px 1px, #9c9c9c 1px 5px 1px, #9c9c9c 1px 6px 1px, #9c9c9c 1px 7px 1px, #9c9c9c 1px 8px 1px, #9c9c9c 1px 9px 1px, #9c9c9c 1px 10px 1px, #9c9c9c 1px 11px 1px, #9c9c9c 1px 12px 1px, rgba(16, 16, 16, 0.4) 1px 38px 26px, rgba(16, 16, 16, 0.2) 1px 42px 30px, rgba(16, 16, 16, 0.2) 1px 46px 65px, rgba(16, 16, 16, 0.4) 1px 50px 95px;
-}
-@media (max-width:767px) {
-    .text3d-1 {
-        font-size: 24px;
+    align-items: center;
+    height: 40px;
+    text-transform: uppercase;
+    
+    .line {
+      display: block;
+      background: #fff;
+      height: 40px;
+      width: 3px;
+      margin: 0 20px;
     }
+    .num {
+      font-size: 10px;
+      span {
+        color: #000;
+      }
+    }
+  }
+  .number {
+    position: absolute;
+    left: 40px;
+    font-size: 150px;
+  }
+  .invite {
+    position: absolute;
+    left: 150px;
+    bottom: 45px;
+    color: #000;
+    width: 20%;
+    
+    &:before {
+      content: '';
+      background: #fff;
+      display: block;
+      width: 40px;
+      height: 3px;
+      margin-bottom: 5px;     
+    }
+  }
+}
+
+.check {
+  background: #fff;
+  height: 250px;
+  width: 450px;
+  padding: 40px;
+  position: relative;
+  
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0; left: 0;
+    border-top: 20px solid #dd3f3e;
+    border-right: 20px solid #fff;
+    width: 0;
+  }
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0; left: 0;
+    border-bottom: 20px solid #dd3f3e;
+    border-right: 20px solid #fff;
+    width: 0;
+  }
+  
+  .big {
+    font-size: 50px;
+    font-weight: 900;
+    line-height: .8em;
+  }
+  .number {
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    color: #ef5658;
+    font-size: 40px;
+  }
+  .info {
+    display: flex;
+    justify-content: flex-start;
+    
+    font-size: 12px;
+    margin-top: 20px;
+    width: 100%;
+    
+    section {
+      margin-right: 50px;
+      &:before {
+        content: '';
+        background: #ef5658;
+        display: block;
+        width: 40px;
+        height: 3px;
+        margin-bottom: 5px;
+      }
+      .title {
+        font-size: 10px;
+        text-transform: uppercase;
+      }
+    }
+  }
 }
